--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ nav {
 .logo {
   font-size: 2rem;
   font-weight: bold;
-  color: var(--primary-color);
+  color: var(--secondary-color);
   margin-right: auto;
 }
 
