--- a/style.css
+++ b/style.css
@@ -138,7 +138,29 @@ section h2 {
   border-radius: 8px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   text-align: center;
-  transition: transform 0.3s;
+  transition: all 420ms;
+  /*When hidden*/
+  opacity: 0;
+  filter: blur(5px);
+  transform: translateY(50%);
+}
+
+.service-card:nth-child(2) {
+  transition-delay: 100ms;
+}
+
+.service-card:nth-child(3) {
+  transition-delay: 200ms;
+}
+
+.service-card:nth-child(4) {
+  transition-delay: 300ms;
+}
+
+.animateUp {
+  opacity: 1;
+  filter: blur(0);
+  transform: translateY(0);
 }
 
 .service-card:hover {
