--- a/style.css
+++ b/style.css
@@ -245,6 +245,21 @@ section h2 {
   border-radius: 8px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   text-align: center;
+  transition: all 1s;
+  /* When hidden */
+  opacity: 0;
+  filter: blur(5px);
+  transform: translateY(50%);
+}
+
+.team-member:nth-child(2) {
+  transition-delay: 100ms;
+}
+
+.team-member.animate {
+  opacity: 1;
+  filter: blur(0);
+  transform: translateY(0);
 }
 
 .team-member img {
@@ -326,6 +341,11 @@ footer {
 @media (max-width: 768px) {
   nav {
     flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .logo {
+    margin: 0 auto;
   }
 
   .nav-links {
